<resources>
    <string name="app_name">Plann.er</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="phone">Telefone</string>
    <string name="user_registration">Cadastro de Usuário</string>
    <string name="add_user_photo_button">Botão adicionar foto de usuário</string>
    <string name="save_user">Salvar usuário</string>
    <string name="logo_image">Imagem logo</string>
    <string name="user_photo_image">Imagem foto do usuário</string>
    <string name="hello_user">Olá, <b>%1$s!</b></string>
    <string name="what_is_the_activity">Qual a atividade?</string>
    <string name="choose_the_date">Escolha a data</string>
    <string name="save_activity">Salvar atividade</string>
    <string name="choose_the_time">Escolha o horário</string>
    <string name="activities">Atividades</string>
    <string name="activity_completion_button">Botão de conclusão de atividade</string>
    <string name="change_activity">Alterar Atividade</string>
</resources>